--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.5",
     "@material-ui/core": "^4.4.3",
+    "axios": "^0.19.0",
     "concurrently": "^4.1.2",
     "node-sass": "^4.12.0",
     "react": "^16.10.1",
