--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^16.10.1",
     "react-scripts": "3.1.2",
     "socket.io": "^2.3.0",
-    "socket.io-client": "^2.3.0"
+    "socket.io-client": "^2.3.0",
+    "uuid": "^3.3.3"
   },
   "scripts": {
     "start": "concurrently \"nodemon ./chat-server/index.js\" \"react-scripts start\"",
